Ticket #704 (closed defect: fixed)

Opened 2 years ago

Last modified 2 years ago

ignore empty ogg vorbis comments

Reported by: hartman Assigned to: hartman
Priority: low Milestone: 0.9.0 bugs
Component: Decoders Version: master
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: easy Work status: Not started

Description

http://forum.videolan.org/viewtopic.php?t=23782

Basically when there are not Title/Artist, the stream updates to empty strings, which is kinda annoying in your playlist view.

Change History

11/20/06 05:50:50 changed by funman

  • status changed from new to closed.
  • resolution set to fixed.

closed by [17887]