Ignore empty vorbis comments (closes #704) Comment unusued artist & album musicbrainz ids