include/vlc_meta.h
@@ -72,8 +72,10 @@ struct vlc_meta_t
     char *psz_encodedby;
     char *psz_arturl;
     char *psz_trackid;
+#if 0 //not used
     char *psz_artistid;
     char *psz_albumid;
+#endif
 
     int i_status;
 #if 0
@@ -104,8 +106,10 @@ struct vlc_meta_t
 #define vlc_meta_SetEncodedBy( meta, b ) vlc_meta_Set( meta, encodedby, b );
 #define vlc_meta_SetArtURL( meta, b ) vlc_meta_Set( meta, arturl, b );
 #define vlc_meta_SetTrackID( meta, b ) vlc_meta_Set( meta, trackid, b );
+#if 0 //not used
 #define vlc_meta_SetArtistID( meta, b ) vlc_meta_Set( meta, artistid, b );
 #define vlc_meta_SetAlbumID( meta, b ) vlc_meta_Set( meta, albumid, b );
+#endif
 
 
 static inline vlc_meta_t *vlc_meta_New( void )
@@ -129,8 +133,10 @@ static inline vlc_meta_t *vlc_meta_New( void )
     m->psz_encodedby = NULL;
     m->psz_arturl = NULL;
     m->psz_trackid = NULL;
+#if 0 //not used
     m->psz_artistid = NULL;
     m->psz_albumid = NULL;
+#endif
     m->i_status = 0;
     return m;
 }
@@ -153,8 +159,10 @@ static inline void vlc_meta_Delete( vlc_meta_t *m )
     free( m->psz_publisher );
     free( m->psz_encodedby );
     free( m->psz_trackid );
+#if 0 //not used
     free( m->psz_artistid );
     free( m->psz_albumid );
+#endif
     free( m->psz_arturl );
 
     free( m );
@@ -184,8 +192,10 @@ static inline void vlc_meta_Merge( vlc_meta_t *dst, vlc_meta_t *src )
     COPY_FIELD( publisher );
     COPY_FIELD( encodedby );
     COPY_FIELD( trackid );
+#if 0 //not used
     COPY_FIELD( artistid );
     COPY_FIELD( albumid );
+#endif
     COPY_FIELD( arturl );
 }
     /** \todo Track meta */
